other-vpol/restrict-escalation-verbs-roles/.kyverno-test/resource.yaml
# Source: keda-base/charts/keda/templates/10-keda-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodclusterrole01
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - configmaps/status
  - events
  verbs:
  - '*'
- apiGroups:
  - ""
  resources:
  - external
  - pods
  - secrets
  - services
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - '*'
  resources:
  - '*'
  verbs:
  - get
- apiGroups:
  - '*'
  resources:
  - '*/scale'
  verbs:
  - '*'
- apiGroups:
  - apps
  resources:
  - deployments
  - statefulsets
  verbs:
  - list
  - watch
- apiGroups:
  - batch
  resources:
  - jobs
  verbs:
  - '*'
# Source: keda-base/charts/keda/templates/20-metrics-clusterrole.yaml
- apiGroups:
  - external.metrics.k8s.io
  resources:
  - '*'
  verbs:
  - '*'
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: goodclusterrole02 # system:discovery
rules:
- nonResourceURLs:
  - /api
  - /api/*
  - /apis
  - /apis/*
  - /healthz
  - /livez
  - /openapi
  - /openapi/*
  - /readyz
  - /version
  - /version/
  verbs:
  - get
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: badclusterrole01
rules:
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - clusterroles
  verbs:
  - escalate
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: badclusterrole02
rules:
- apiGroups:
  - '*'
  resources:
  - '*'
  verbs:
  - '*'
---
# In the manifest, if the 'rules' field is not specified or is specified as 'rules: ' without a value, 
# it will be set to null by default when created in the cluster
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: default-rules
rules: null
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: goodrole01
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - configmaps/status
  - events
  verbs:
  - '*'
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: badrole01
rules:
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - roles
  verbs:
  - impersonate
---
# In the manifest, if the 'rules' field is not specified or is specified as 'rules: ' without a value, 
# it will be set to null by default when created in the cluster
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: default-rules
rules: null
---
---
# ClusterRole rule with only nonResourceURLs (no resources field).
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: nonresource-rule
rules:
- nonResourceURLs: ["/healthz", "/livez"]
  verbs: ["get"]
