other-vpol/restrict-escalation-verbs-roles/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-escalation-verbs-roles
policies:
- ../restrict-escalation-verbs-roles.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: ClusterRole
  policy: restrict-escalation-verbs-roles
  resources:
  - badclusterrole01
  - badclusterrole02
  result: fail
- isValidatingPolicy: true
  kind: Role
  policy: restrict-escalation-verbs-roles
  resources:
  - badrole01
  result: fail
- isValidatingPolicy: true
  kind: ClusterRole
  policy: restrict-escalation-verbs-roles
  resources:
  - goodclusterrole01
  - goodclusterrole02
  - default-rules
  result: pass
- isValidatingPolicy: true
  kind: Role
  policy: restrict-escalation-verbs-roles
  resources:
  - goodrole01
  - default-rules
  result: pass
